crates/tk/tests/snapshots/scenarios__help_detach.snap
---
source: crates/tk/tests/scenarios.rs
assertion_line: 642
expression: "p.run(&format!(\"{command} --help\"))"
---
Keep a Backend Item as local work without changing the Backend object

Usage: tk detach <ID>

Arguments:
  <ID>  Display ID or Alias of the Backend Item to detach

Options:
  -h, --help  Print help
