crates/tk/tests/snapshots/scenarios__help_done.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"{command} --help\"))"
---
Close a Ticket or Epic

Usage: tk done [OPTIONS] <ID>

Arguments:
  <ID>  Display ID or Alias of the Ticket or Epic to close

Options:
  -m, --message <TEXT>  Optional Closing Reason recorded against the closed item
  -h, --help            Print help
