crates/tk/tests/snapshots/scenarios__help_grep.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"{command} --help\"))"
---
Search title and body text for a regular expression; show context by default

Usage: tk grep [OPTIONS] <PATTERN>

Arguments:
  <PATTERN>  Regular expression to search for in title and body text

Options:
  -i, --ignore-case         Match case-insensitively (full Unicode case folding)
  -F, --fixed-strings       Match the pattern as a literal string, not a regular expression
  -C, --context <N>         Show N lines of context on each side of a match (default 3)
  -A, --after-context <N>   Show N lines of context after each match (overrides -C)
  -B, --before-context <N>  Show N lines of context before each match (overrides -C)
  -q, --quiet               Suppress all output and exit on the first match
  -c, --count               Print the count of matching items instead of the match blocks
  -l, --list                Print each match as `<display-id>: <title>`
  -h, --help                Print help
