crates/tk/tests/snapshots/scenarios__help_init.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"{command} --help\"))"
---
Initialize the Repository Store for the current Git repository.

Stores live in platform-local user data outside the checkout. Stop all tk processes before running init to migrate a legacy Store from Git metadata. Init repairs uniquely identified Vacant Stores; other broken associations print ranked evidence and complete recovery commands. Attachment requires valid metadata and a readable database. Release the former repository's pointer before attaching a Store it still owns. Both recovery options refuse a healthy association and preserve prior data.

Usage: tk init [OPTIONS]

Options:
      --attach <STORE_ID>
          Explicitly attach a valid Store whose former ownership has been released

      --new
          Create a distinct Store, preserving all prior Stores

  -h, --help
          Print help (see a summary with '-h')
