crates/tk/tests/snapshots/scenarios__help_list.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"{command} --help\"))"
---
Render the Repository Store List Tree

Usage: tk list [OPTIONS] [EPIC_ID]

Arguments:
  [EPIC_ID]  Scope the listing to this Epic and its child Tickets. Falls back to the `TK_SCOPE` environment variable

Options:
      --ready    Show open, idle, accepted Tickets with no unresolved blockers
      --blocked  Show open or active Tickets with unresolved blockers, excluding triage
      --active   Show active Tickets and Epics
      --triage   Show triage Tickets (captured, not yet accepted)
      --parked   Show parked Tickets (accepted, held out of automatic selection)
      --local    Restrict to items with Local Origin
      --remote   Restrict to items with Backend Origin
      --epic     Show only Epics
  -h, --help     Print help
