crates/tk/tests/snapshots/scenarios__help_park.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"{command} --help\"))"
---
Hold an accepted Ticket out of automatic selection, keeping its Priority

Usage: tk park <ID>

Arguments:
  <ID>  Display ID or Alias of the Ticket to park

Options:
  -h, --help  Print help
