crates/tk/tests/snapshots/scenarios__help_plan_add.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"plan {subcommand} --help\"))"
---
Include Tickets in the Plan; validate the whole batch before editing

Usage: tk plan add <ID>...

Arguments:
  <ID>...  Ticket Display IDs or Aliases

Options:
  -h, --help  Print help
